Refactored the code to be compatible with JDK11.